--- a/98.Reference/30.CourseNotebooks/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/98.Reference/30.CourseNotebooks/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -25,35 +25,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "rad = []\n",
+    "\n",
     "def vol(rad):\n",
-    "    pass"
+    "    radcube = (rad**3)\n",
+    "    #volume = ((4/3)*(22/7)*rad***3)\n",
+    "    volume = (4/3)*(22/7)*radcube\n",
+    "    return volume\n",
+    "    \n",
+    "    #pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33.49333333333333"
+       "113.14285714285712"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check\n",
-    "vol(2)"
+    "vol(3)"
    ]
   },
   {
@@ -78,20 +83,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is in the range between 2 and 7\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
      ]
     }
    ],
    "source": [
-    "# Check\n",
-    "ran_check(5,2,7)"
+    "for item in range(0,5):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 in range(0,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 in range(0,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ran_check2(num, low, high):\n",
+    "#     num in range(low, high+1)   \n",
+    "#    return num in range(low, high+1)\n",
+    "    if num in range(low, high+1):\n",
+    "        print(f'{num} in range of low and high')\n",
+    "    else:\n",
+    "        print('not in range')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not in range\n"
+     ]
+    }
+   ],
+   "source": [
+    "ran_check2(2,7,9)"
    ]
   },
   {
@@ -152,34 +233,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def up_low(s):\n",
-    "    pass"
+    "# sentence = (\"Enter String\")\n",
+    "# count_upper = 0\n",
+    "# count_lower = 0\n",
+    "\n",
+    "def upper_lower(sentence):\n",
+    "    count_upper = 0\n",
+    "    count_lower = 0\n",
+    "    for i in sentence:\n",
+    "        if(i.islower()):\n",
+    "            count_lower += 1\n",
+    "        elif(i.isupper()):\n",
+    "            count_upper += 1\n",
+    "        else:\n",
+    "            pass # this is for symbols which are neither upper nor lower case\n",
+    "    print(f'the count of upper case letters is {count_upper}')\n",
+    "    print(f'the count of lower case letters is {count_lower}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "the count of upper case letters is 4\n",
+      "the count of lower case letters is 33\n"
      ]
     }
    ],
    "source": [
-    "s = 'Hello Mr. Rogers, how are you this fine Tuesday?'\n",
-    "up_low(s)"
+    "upper_lower(\"Hello Mr. Rogers, how are you this fine Tuesday?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Using dictionary\n",
+    "\n",
+    "def upper_lower_dict(sentence):\n",
+    "    dict = {'upper': 0, 'lower':0}\n",
+    "    \n",
+    "    for char in sentence:\n",
+    "        if char.isupper():\n",
+    "            dict['upper'] += 1\n",
+    "        elif char.islower():\n",
+    "            dict['lower'] += 1\n",
+    "        else:\n",
+    "            pass\n",
+    "    print(f'lower case count is {dict[\"lower\"]}')\n",
+    "    print(f'upper case count is {dict[\"upper\"]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lower case count is 33\n",
+      "upper case count is 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "upper_lower_dict(\"Hello Mr. Rogers, how are you this fine Tuesday?\")"
    ]
   },
   {
@@ -195,6 +326,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [1,1,1,1,2,2,3,3,3,3,4,5]\n",
+    "\n",
+    "def unique_list1(list1):\n",
+    "    unique_list = []\n",
+    "    for num in list1:\n",
+    "        if num not in unique_list:\n",
+    "            unique_list.append(num)\n",
+    "#    print(num)\n",
+    "    print(unique_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_list1(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": true
@@ -203,6 +368,39 @@
    "source": [
     "def unique_list(lst):\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list2 = [1,1,1,1,2,2,3,3,3,3,4,5]\n",
+    "\n",
+    "def unique_list2(list2):\n",
+    "#    return set(list2)\n",
+    "    return list(set(list2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_list2(list2)"
    ]
   },
   {
@@ -234,6 +432,41 @@
     "\n",
     "    Sample List : [1, 2, 3, -4]\n",
     "    Expected Output : -24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist3 = [1, 2, 3, -4]\n",
+    "\n",
+    "def multiplynum(mylist3):\n",
+    "    result = 1\n",
+    "    for num in mylist3:\n",
+    "        result = result * num\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-24"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiplynum(mylist3)\n"
    ]
   },
   {
@@ -280,19 +513,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    # remove spaces from the string\n",
+    "    s = s.replace(' ', '')\n",
+    "    \n",
+    "    \n",
+    "    # check if string == reversed version of the string\n",
+    "    return s == s[::-1]\n",
+    "    \n",
+    "    \n",
+    "#     return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +540,13 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('nurses run')"
    ]
   },
   {
@@ -331,30 +570,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 68,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    \n",
+    "    # create a set of the aplpahet\n",
+    "    alphaset = set(alphabet)\n",
+    "    print(alphaset)\n",
+    "    \n",
+    "    # remove spaces from the input string\n",
+    "    str1 = str1.replace( ' ', '')\n",
+    "    \n",
+    "    \n",
+    "    # convert inpuyt string to lower case\n",
+    "    str1 = str1.lower()\n",
+    "    print(str1)\n",
+    "    \n",
+    "    # grabn all unique letters from the string\n",
+    "    str1 = set(str1)\n",
+    "    \n",
+    "    \n",
+    "    # compare alphabnet set with the string set from the input\n",
+    "    return str1 == alphaset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'l', 'v', 'k', 'q', 'g', 'n', 'p', 'e', 'i', 'u', 't', 'f', 'z', 'h', 's', 'o', 'r', 'c', 'y', 'a', 'd', 'w', 'm', 'j', 'b', 'x'}\n",
+      "thequickbrownfoxjumpsoverthelazydog\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +658,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
