--- a/08.Section8 (Object Oriented Programming)/69. OOP - Attributes and Class Keyword.ipynb
+++ b/08.Section8 (Object Oriented Programming)/69. OOP - Attributes and Class Keyword.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9532f4e2",
+   "id": "992c4f5b",
    "metadata": {},
    "source": [
     "<font size = 8> Attributes and Class Keyword"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2c8c026",
+   "id": "e8e7d952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0cec3794",
+   "id": "4158191b",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d9ee533b",
+   "id": "344bbaa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea25c48c",
+   "id": "689b2ee6",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1dcad53c",
+   "id": "90164724",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d529e14f",
+   "id": "02ddfeb9",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd7bdf3c",
+   "id": "9c577834",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ac52f2",
+   "id": "297046fb",
    "metadata": {},
    "source": [
     "***"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "92855426",
+   "id": "ddfdf069",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f08c2fe5",
+   "id": "75e79ffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0eae406b",
+   "id": "363170b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a25e8e5",
+   "id": "e7359613",
    "metadata": {},
    "source": [
     "<font color = red> Snake casing (for function)  v/s camel casing (for OOP)"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ffce209b",
+   "id": "f3b799ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2a08c33d",
+   "id": "fdc83de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "36c0c3b8",
+   "id": "5428b282",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f0d5164b",
+   "id": "428a93be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c2f4c7c7",
+   "id": "63116329",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "70abf0d9",
+   "id": "7da6057b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "02594677",
+   "id": "010fcd3a",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3caf6440",
+   "id": "1e5ff338",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3b6fae70",
+   "id": "37f013fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1519decf",
+   "id": "f23e27c9",
    "metadata": {},
    "source": [
     "***"
@@ -313,7 +313,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6cd562c3",
+   "id": "599e5d4b",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5c144ea2",
+   "id": "211cf94a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,9 +330,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d763ddf3",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d77e1478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connection between parameters and attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4c04d2d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# init is a constructor for a class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a7f94407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog():\n",
+    "    \n",
+    "    def __init__(self, breed):\n",
+    "    \n",
+    "        self.breed = breed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "42ee51fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydog = Dog(breed='Daschund')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "32a6bb19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Daschund'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mydog.breed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8e5a2910",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Dog"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mydog)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b04658ea",
+   "id": "4c954998",
    "metadata": {},
    "outputs": [],
    "source": []
